--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <audio src="./Musics/hey.mp3" id="audio"></audio>
 
       <div class="img-container">
-        <img src="./Images/summer.jpg" alt="" id="cover" />
+        <img src="./Images/1.jpeg" alt="" id="cover" />
       </div>
 
       <div class="navigation">
